Made By First Project

--- a/Sigma-Web-Dev-Course/Video 4/index.html
+++ b/Sigma-Web-Dev-Course/Video 4/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Bookmark - Code With Harry</title>
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
     <h1>My Bookmark</h1>
+    <h2>Main-Bookmarks using h2</h2>
+    <h3>Main-Bookmarks using h3</h3>
+    <h4>Main-Bookmarks using h4</h4>
+    <h5>Main-Bookmarks using h5</h5>
+    <h6>Main-Bookmarks using h6</h6>
+
+    <!-- For Dummy Text -->
+    <p style="background-color: teal;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores architecto exercitationem laboriosam optio quia illum vero excepturi delectus voluptate, beatae quaerat quisquam culpa accusamus ipsum aspernatur ab a. Totam, nulla!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, vel.</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi, numquam. Eveniet eaque accusantium consequuntur ducimus voluptate? Amet, deserunt aliquam. Veniam porro hic magni qui dolorum labore eos asperiores. Accusamus, dicta. Distinctio molestias earum modi tempora minima dignissimos assumenda iure et, rem tenetur nostrum a voluptatibus, numquam eos quisquam maxime iusto id! Unde aspernatur in, nobis incidunt architecto vitae nisi dolor nemo cumque consectetur voluptate nihil mollitia nostrum eligendi dignissimos facere iure ea illo culpa enim vel omnis! Non assumenda dicta ipsa quod tempore ducimus eius optio, libero rerum. Maxime nostrum placeat ea architecto consequatur maiores! Veritatis voluptates necessitatibus incidunt officia.</p>
 </body>
 </html>
